<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/permission_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.9"
        android:padding="10dp">

        <TextView
            android:id="@+id/permission_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/phone"
            />

        <TextView
            android:id="@+id/permission_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/permission_1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/permission_granted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_circle_green_24px"
        android:layout_weight="0.1"
        android:layout_gravity="center"
        android:padding="10dp"
        android:visibility="gone"
        android:contentDescription="@string/grant_permission"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/permission_not_granted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/grant"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_weight="0.1"
        android:visibility="visible" />
</LinearLayout>
