<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/security_24px"
            android:contentDescription="@string/permissions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_permissions_amp_your_privacy"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permissions_privacy_notice"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:divider="?android:attr/dividerVertical"
            android:showDividers="middle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/call_24px"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/phone"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center_vertical"
                    android:text="@string/phone"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:text="@string/permission_1"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/call_log_24px"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/call_logs"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center_vertical"
                    android:text="@string/call_logs"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:text="@string/permission_2"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/contacts_24px"
                    android:contentDescription="@string/contacts" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center_vertical"
                    android:text="@string/contacts"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:text="@string/permission_3"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/notifications_24px"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/notifications" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center_vertical"
                    android:text="@string/notifications"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.85"
                    android:text="@string/permission_5"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system_handled_permissions"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:divider="?android:attr/dividerVertical"
            android:showDividers="middle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/timer_24px"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/permission_4"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/permission_4"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/settings_24px"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/permission_6" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/permission_6"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/refresh_24px"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/permission_7" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/permission_7"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/mobile_vibrate_24px"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/permission_8" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/permission_8"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
